package com.bo.structuralPattern.bridge;


//颜色接口
public interface Color {
    public void bepaint(String shape);
}
