package com.bo.structuralPattern.bridge.shapeImpl;

import com.bo.structuralPattern.bridge.Shape;

public class Circle extends Shape {
 
    public void draw() {
        color.bepaint("正方形");
    }
}